# ai-agents-platform

./: README.md  README_RU.md  diagrams.mmd  manage.py  pyproject.toml
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  dev_postgres.py
docs/: docs.txt
src/agents/: admin.py  apps.py  llm_service.py  models.py  schemas.py  services.py  tool_registry.py  tools.py
src/api/drf/: urls.py  viewsets.py
src/api/fastapi/: asgi.py  routers.py
src/core/: admin.py  logging.py
src/runs/: admin.py  apps.py  executor.py  models.py  outbox.py  schemas.py
src/runs/management/commands/: runworker.py
src/runs/migrations/: 0001_initial.py
src/workflows/: admin.py  apps.py  models.py  schemas.py
src/workflows/migrations/: 0001_initial.py
tests/: conftest.py
tests/e2e/: test_drf_agents.py
tests/integration/: test_agent_service.py
tests/unit/: test_llm_service.py  test_schemas.py  test_tool_registry.py
