[project]
name = "ai-agents-platform"
version = "1.0.0"
description = "Production-ready AI Multi-Agent Workflow Engine built on Django 5 and Django Nova."
requires-python = ">=3.12"
authors = [{name = "Artem Alimpiev", email = "alimpievne@gmail.com"}]

dependencies = [
    # Core Framework
    "django>=5.0.4,<5.1",
    "django-nova[drf,fastapi,tracing,observability] @ git+https://github.com/Artem7898/django-nova.git",
    "django-cors-headers>=4.3.0",

    # Validation & API
    "pydantic>=2.7.0,<3.0",
    "djangorestframework>=3.15.0,<3.16",
    "fastapi>=0.115.0,<0.116",

    # Async & HTTP
    "httpx>=0.27.0",
    "openai>=1.20.0",
    "uvicorn[standard]>=0.29.0",
    "uvloop>=0.19.0",

    # Database
    "psycopg[binary]>=3.1.18",
    "django-postgres-extra>=2.0.8", # For CONCURRENTLY migrations

    # Observability
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
    "opentelemetry-instrumentation-django>=0.45b0",
    "opentelemetry-instrumentation-httpx>=0.45b0",
    "structlog>=24.1.0",

    # Utils
    "pydantic-settings>=2.2.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-django>=4.8.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",       # Mocking httpx
    "factory-boy>=3.3.0",
    "ruff>=0.3.0",         # Linter & Formatter
    "pyright>=1.1.350",    # Strict Type Checking
    "mkdocs-material>=9.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src", "config"]


[tool.pyright]
typeCheckingMode = "strict"
reportIncompatibleVariableOverride = "none"
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "RET", "SIM", "ARG", "PTH"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py"]